# vet

./: .clippy.toml  .vet.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  knope.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pattern_request.yml
.github/workflows/: ci.yml  pr-title.yml  release-artifacts.yml  release-knope.yml  release-vscode.yml  security-audit.yml  smoke-test.yml
crates/vet_cli/: Cargo.toml
crates/vet_cli/src/: files.rs  git.rs  main.rs  scanning.rs  ui.rs
crates/vet_cli/src/commands/: hook.rs  mod.rs  patterns.rs
crates/vet_cli/src/commands/baseline/: interactive.rs  mod.rs  stats.rs
crates/vet_cli/src/commands/fix/: actions.rs  mod.rs  prompts.rs
crates/vet_cli/src/commands/history/: context.rs  mod.rs  scanner.rs  types.rs
crates/vet_cli/src/commands/history/output/: json.rs  mod.rs  sarif.rs  text.rs
crates/vet_cli/src/commands/init/: detection.rs  mod.rs  prompts.rs  templates.rs
crates/vet_cli/src/commands/scan/: context.rs  mod.rs  runner.rs
crates/vet_cli/src/commands/scan/output/: json.rs  mod.rs  sarif.rs  text.rs
crates/vet_cli/src/git/: local.rs  mod.rs  types.rs
crates/vet_cli/tests/: baseline_e2e.rs  cli_e2e.rs  cli_exit_codes.rs  cli_snapshots.rs  completions_e2e.rs  fix_e2e.rs  history_e2e.rs  hook_e2e.rs  init_e2e.rs  patterns_e2e.rs  scan_e2e.rs
crates/vet_cli/tests/snapshots/: cli_snapshots__init_minimal_config.snap  cli_snapshots__json_no_findings.snap  init_e2e__init_minimal_config.snap
crates/vet_core/: Cargo.toml
crates/vet_core/benches/: scanning.rs
crates/vet_core/src/: binary.rs  comment_syntax.rs  config.rs  entropy.rs  error.rs  fs_util.rs  lib.rs  prelude.rs  protocol.rs  test_utils.rs  text.rs
crates/vet_core/src/ast/: dotenv.rs  mod.rs  trigger.rs  validator.rs
crates/vet_core/src/ast/queries/: go.scm  java.scm  javascript.scm  python.scm  ruby.scm  rust.scm  typescript.scm
crates/vet_core/src/baseline/: error.rs  file.rs  finding.rs  fingerprint.rs  matcher.rs  mod.rs
crates/vet_core/src/finding/: mod.rs  secret.rs  span.rs
crates/vet_core/src/pattern/: builtin.rs  mod.rs  patterns.toml
crates/vet_core/src/scanner/: mod.rs
crates/vet_core/tests/: property_tests.rs
crates/vet_lsp/: Cargo.toml
crates/vet_lsp/src/: code_actions.rs  comment_syntax.rs  debounce.rs  diagnostics.rs  exclusions.rs  git.rs  hover.rs  main.rs  state.rs  uri.rs
crates/vet_lsp/src/server/: handlers.rs  mod.rs  scanning.rs  workspace.rs
crates/vet_providers/: Cargo.toml
crates/vet_providers/src/: lib.rs  pattern.rs  provider.rs  registry.rs  verify.rs
crates/vet_providers/src/providers/: mod.rs
crates/vet_providers/src/providers/ai/: anthropic.rs  deepseek.rs  groq.rs  huggingface.rs  mod.rs  openai.rs  perplexity.rs
crates/vet_providers/src/providers/cloud/: airtable.rs  algolia.rs  aws.rs  azure.rs  cloudflare.rs  databricks.rs  digitalocean.rs  figma.rs  firebase.rs  flyio.rs  gcp.rs  heroku.rs  linear.rs  mod.rs  netlify.rs  supabase.rs  vercel.rs
crates/vet_providers/src/providers/database/: mod.rs  planetscale.rs
crates/vet_providers/src/providers/email/: mailgun.rs  mod.rs  resend.rs  sendgrid.rs
crates/vet_providers/src/providers/generic/: api_key.rs  mod.rs  password.rs  secret.rs  token.rs
crates/vet_providers/src/providers/infra/: buildkite.rs  circleci.rs  confluent.rs  datadog.rs  doppler.rs  fastly.rs  grafana.rs  launchdarkly.rs  mod.rs  newrelic.rs  onepassword.rs  pagerduty.rs  postman.rs  sentry.rs  terraform.rs  vault.rs
crates/vet_providers/src/providers/keys/: mod.rs
crates/vet_providers/src/providers/messaging/: discord.rs  mod.rs  slack.rs  telegram.rs  twilio.rs
crates/vet_providers/src/providers/payments/: braintree.rs  mod.rs  paypal.rs  razorpay.rs  shopify.rs  square.rs  stripe.rs
crates/vet_providers/src/providers/vcs/: atlassian.rs  github.rs  gitlab.rs  mod.rs
editors/vscode/: .gitignore  .vscodeignore  README.md  biome.json  esbuild.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
editors/vscode/src/: extension.ts
editors/vscode/src/client/: VetClient.ts
editors/vscode/src/commands/: ignoreInConfig.ts  restart.ts  verifySecret.ts
editors/vscode/src/protocol/: types.ts
editors/vscode/src/providers/: HoverProvider.ts
editors/vscode/src/services/: NotificationService.ts  ServerResolver.ts  StatusBarService.ts
editors/vscode/test/e2e/: runTest.ts  tsconfig.json
editors/vscode/test/e2e/fixtures/workspace/: .vet.toml  baseline-test.ts  clean-file.ts  has-secret.ts
editors/vscode/test/e2e/suite/: baseline.test.ts  extension.test.ts  index.ts  untitled.test.ts
editors/vscode/test/unit/client/: VetClient.test.ts
editors/vscode/test/unit/commands/: restart.test.ts  verifySecret.test.ts
editors/vscode/test/unit/mocks/: vscode.ts
editors/vscode/test/unit/providers/: HoverProvider.test.ts
editors/vscode/test/unit/services/: NotificationService.test.ts  ServerResolver.test.ts  StatusBarService.test.ts
scripts/: smoke-test.ps1  smoke-test.sh
scripts/install/: install.ps1  install.sh
