[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/spikermint/vet"
authors = ["Tim Perkins"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
assert_cmd = "2.1"
clap = { version = "4.5", features = ["derive", "color", "help"] }
clap_complete = "4.5"
console = "0.16"
criterion = "0.8"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
fnv = "1.0"
git2 = { version = "0.20", features = ["vendored-openssl"] }
globset = "0.4"
ignore = "0.4"
indicatif = "0.18"
insta = { version = "1.46", features = ["filters"] }
predicates = "3.1"
proptest = "1.9"
rayon = "1.11"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vet_core = { path = "crates/vet_core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
