[package]
name = "vet_core"
description = "Core scanning engine for vet secret scanner"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
aho-corasick.workspace = true
chrono.workspace = true
hex.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing = { workspace = true, optional = true }
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
vet_providers.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "scanning"
harness = false
